<resources>

    <string name="app_name" translatable="false">Cash Book Manager</string>

    <string name="action_settings">Settings</string>
    <string name="about_app">An application to manage your cash transactions in a safe and secure manner</string>
    <string name="update_key">Update Key</string>
    <string name="check_my_other_apps">Check Other Applications</string>
    <string name="share_app">Share Application</string>
    <string name="rate_app">Rate Application</string>

    <string name="enter_app_key">Enter key</string>
    <string name="save">Save</string>
    <string name="enter">Enter Key</string>
    <string name="re_enter_key">Re-Enter Key</string>
    <string name="empty_fields">Empty Field(s)</string>
    <string name="keys_should_be_same">keys should be same</string>
    <string name="incorrect_key_entered">Incorrect Key Entered</string>
    <string name="share">Share</string>

    <string name="enter_transaction_details">Enter Transaction Details</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="additional_info">Enter Additional Information</string>
    <string name="select_date">Select Date</string>
    <string name="amount_credited">Amount Credited</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="delete_transaction">Delete Transaction</string>
    <string name="confirm_delete">Are you sure you want to delete this transaction?</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="all_transactions">All Transactions</string>

</resources>
