<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/app_name"
        android:padding="10dp"
        android:gravity="center"
        android:textSize="42sp"
        android:layout_marginTop="25dp"
        />

    <EditText
        android:id="@+id/enter_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/enter"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/re_enter_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/re_enter_key"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_key"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        />

</LinearLayout>
