<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar" />

    <TextView
        android:id="@+id/about_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:text="@string/about_app"
        android:gravity="center"
        />

    <Button
        android:id="@+id/update_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_text"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/update_key"
        android:textColor="@color/white" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/update_key"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:id="@+id/other_apps_by_me"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/check_my_other_apps"
        android:textColor="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#df4e37"
        android:layout_above="@+id/lin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:id="@+id/lin"
        android:weightSum="2">

        <Button
            android:id="@+id/share_app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/share_app"
            android:textColor="@color/white" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/rate_app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/rate_app"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>